--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,7 @@
 @import './scss/components/cta';
 @import './scss/components/read';
 @import './scss/components/event';
-@import './scss/components/footer';
+@import './scss/layouts/footer';
 
 .home {
   &__banner {
