--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -32,9 +32,12 @@ textarea {
   justify-content: space-between;
   align-items: center;
   gap: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 9;
   height: 67px;
-  position: fixed;
-  z-index: 99999999999;
   background-color: transparent;
   width: 100%;
 }
@@ -73,11 +76,177 @@ textarea {
   background-color: rgba(29, 33, 48, 0.8);
 }
 
-.dona {
-  padding-top: 96px;
+.cta__content {
+  padding: 96px 0;
 }
+.cta__content-project {
+  width: 1280px;
+  height: 384px;
+  position: relative;
+}
+.cta__content-project::after {
+  content: "";
+  position: absolute;
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.cta__content-project--title {
+  position: absolute;
+  top: 30%;
+  left: 30%;
+  z-index: 9;
+  color: #ffffff;
+  text-align: center;
+  transform: translate(-10%);
+  width: 631px;
+}
+.cta__content-project--heading {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 120%;
+  color: #ffffff;
+  padding-bottom: 32px;
+}
+.cta__content-project--button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+.cta__content-project--btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 16px 32px;
+  height: 51px;
+  gap: 10px;
+  border-radius: 4px;
+  background-color: #70c174;
+  color: #ffffff;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.cta__content-project--btn:hover {
+  background-color: rgba(112, 193, 116, 0.8);
+}
+.cta__content-project--btn2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 16px 32px;
+  height: 51px;
+  gap: 10px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: #0b0706;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.cta__content-project--btn2:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.footer__content {
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  gap: 0;
+  width: 100%;
+  background-color: #0b0706;
+  padding: 96px 110px;
+}
+.footer__content img {
+  padding-right: 117px;
+}
+.footer__content-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 96px;
+}
+.footer--title {
+  height: 210px;
+}
+.footer__content-item--p {
+  color: #ffffff;
+  font-weight: 700;
+}
+.footer__content-item--para {
+  color: #ffffff;
+  opacity: 0.78;
+  padding: 12px 0;
+  width: 84px;
+}
+.footer__content-btn {
+  padding-left: 147px;
+}
+.footer__content-btn--in {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
+  margin-top: 32px;
+}
+.footer__content-btn--in input {
+  border: 1px solid rgba(235, 240, 249, 0.3);
+  width: 400px;
+  height: 64px;
+  padding-left: 24px;
+  color: #ffffff;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+.footer__content-btn--in button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  padding: 16px 32px;
+  height: 64px;
+  gap: 10px;
+  border-radius: 4px;
+  background-color: #ffffff;
+  color: #0b0706;
+  cursor: pointer;
+  transition: 0.3s;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.footer__content-btn--in button:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.footer__content-heading {
+  font-weight: 700px;
+  color: #ffffff;
+  font-size: 40px;
+}
+
 .dona__content {
+  padding-top: 96px;
+  padding-bottom: 96px;
   background-color: #eff7f2;
+  width: 100%;
 }
 .dona__content-section {
   display: flex;
@@ -194,6 +363,7 @@ textarea {
   justify-content: space-between;
   align-items: center;
   gap: 96px;
+  padding-bottom: 96px;
 }
 .dona__usege-content--heading {
   font-weight: 700;
